# monte_carlo

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  BUILD_NATIVE.md  CLEANUP_SUMMARY.md  Q.md  README.md  build-wasm.js  build-wasm.ps1  build-wasm.sh  cleanup-wasm.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-mysql.sh  test_report_server.css  test_report_server.html  test_report_server.py
backend/: Dockerfile  fallback.html  package.json  pnpm-lock.yaml  routes_app.js  routes_dev.js  routes_sim.js  schema.js  server.js  state.js  test-rs.js  test-sim-rs.js  test-sim.js  utils.js
backend/sim/des/: README.md  engine.js
backend/sim/des/helpers/: availability.js  demand.js  distributions.js  resources.js  state.js
backend/sim/des/scenarios/: 00-demo-baseline.json  01-demo-is-payload-availability-limiting-es-missions.json  02-demo-payload-bottleneck-long-mounts.json  03-demo-payload-mounts-compare-fast-vs-slow.json  04-smoke-1unit-1mission-daily-all-payloads.json  05-smoke-1unit-1mission-hourly-short-flight.json  06-smoke-1unit-1mission-hourly-with-mount.json  07-smoke-2units-1mission-balanced-hourly.json  08-staffing-1week.json  09-staffing-1month.json  10-staffing-1quarter.json  11-staffing-1year.json  are-pilots-the-bottleneck.json  baseline.json  does-80-20-unit-split-improve-throughput.json  is-payload-availability-limiting-es-missions.json  payload-bottleneck-long-mounts.json  payload-mounts-compare-fast-vs-slow.json  sensor-switching-penalty.json  smoke-1unit-1type-daily-all-payloads.json  smoke-1unit-1type-hourly-1h-cycle.json  smoke-1unit-1type-hourly-short-flight.json  (+2 more)
backend/sim/monte/: README.md  engine.js  worker.js
backend/tests/: des.engine.blackbox.test.js  des.engine.whitebox.test.js  fixtures.js
backend/tests/reports/: README.md
backend/wasm/: .gitkeep  bindings.js
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.vue  constants.ts  state.ts
frontend/src/assets/: styles.css
frontend/src/components/: MultiTableTab.vue  Table.vue
frontend/src/composables/: useLocalStorage.ts
frontend/src/views/: Aircraft.vue  Conditions.vue  DES.vue  Monte.vue  Payload.vue  Readiness.vue  Staffing.vue  Training.vue  Unit.vue
sim-native/: ARCHITECTURE.md  Cargo.toml  Dockerfile.profiler  GPU.md  README.md  profiler.sh  run-flamegraph.sh
sim-native/bench/: Cargo.toml
sim-native/bench/src/: main.rs
sim-native/des/: Cargo.toml  package.json
sim-native/des/src/: lib.rs
sim-native/monte/: Cargo.toml  index.d.ts
sim-native/monte/src/: lib.rs
sim-native/profiles/: README.md
sim-native/shared/: Cargo.toml  README.md
sim-native/shared/src/: gpu.rs  lib.rs
sim-native/shared/src/shaders/: reduce.wgsl
sql_scripts/: ddl.sql  dml.sql  views.sql
(+68 files in other folders)
