[workspace]
members = ["des", "monte", "shared", "bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.10"
num_cpus = "1.16"
wgpu = "0.20"
pollster = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

