[package]
name = "sim-native-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
sim-native-des = { path = "../des" }
sim-native-monte = { path = "../monte" }
sim-native-shared = { path = "../shared" }
serde_json = "1.0"

[features]
default = []
gpu = ["sim-native-monte/gpu", "sim-native-shared/gpu"]

