[package]
name = "sim-native-monte"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
sim-native-shared = { path = "../shared" }
sim-native-des = { path = "../des" }
pollster = { workspace = true, optional = true }

[features]
default = []
gpu = ["sim-native-shared/gpu", "dep:pollster"]


