[package]
name = "sim-native-shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { version = "1", optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

